--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+
+	<head>
+
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Sander van Ooijen - Developer based in The Netherlands</title>
+
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    
+		<link rel='stylesheet' href='https://cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
+
+	</head>
+
+	<body>
+
+		<div class="jumbotron bg-transparent mb-0 radius-0">
+		 	<div class="container">
+		     	<div class="row">
+		       		<div class="col-xl-12">
+
+		          		<h1 class="display-2 text-success">I'm Sander</h1>
+						
+						<div class="lead mb-3 text-mono">and I develop applications</div>
+
+						<div class="mb-3 text-mono">I'm a developer based in The Netherlands who is interested in everything the programming world has to offer. I'm using my GitHub page to experiment with different programming languages and frameworks to make all sorts of applications.</div>
+
+						<div class="mb-3 text-mono"><span class="text-success">Sanders-MacBook:~ apps$</span> ls</div>
+
+						<div class="mb-3 text-mono"><span class="text-success">Sanders-MacBook:~ apps$</span> cd ~/social</div>
+
+						<div class="mb-3 text-mono"><span class="text-success">Sanders-MacBook:~ social$</span> ls</div>
+
+						<div class="mb-3 text-mono"><a href="https://www.facebook.com/sander.jwz" target="_blank">facebook.html</a> <a href="https://www.linkedin.com/in/sander-van-ooijen-76597a96/" target="_blank">linkedin.html</a> <a href="https://twitter.com/SVNDERVO" target="_blank">twitter.html</a></div>
+
+						<div class="mb-3 text-mono"><span class="text-success">Sanders-MacBook:~ social$</span> exi<span class="vim-caret">t</span></div>
+
+		      		</div>
+		  		</div>
+			</div>
+		</div>
+
+	</body>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-66897990-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-66897990-2');
+	</script>
+
+</html>
