--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="Sander van Ooijen">
+		<meta name="keywords" content="HTML,CSS,JavaScript,Mac,Linux">
+		<meta name="description" content="I'm a developer based in The Netherlands who is interested in everything the programming world has to offer. I'm using my GitHub page to experiment with different programming languages and frameworks to make all sorts of applications.">
+
 		<title>Sander van Ooijen - Developer based in The Netherlands</title>
 
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+		<link rel="icon" type="image/png" href="images/favicon.png">
     
 		<link rel='stylesheet' href='https://cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
