--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="author" content="Sander van Ooijen">
 		<meta name="keywords" content="HTML,CSS,JavaScript,Mac,Linux">
 		<meta name="description" content="I'm a developer based in The Netherlands who is interested in everything the programming world has to offer. I'm using my GitHub page to experiment with different programming languages and frameworks to make all sorts of applications.">
+		<meta name="theme-color" content="#000">
 
 		<title>Sander van Ooijen - Developer based in The Netherlands</title>
 
